[gd_scene load_steps=21 format=3 uid="uid://b1kp1dg4htqos"]

[ext_resource type="Script" path="res://Scripts/UI/Settings.gd" id="1_c7155"]
[ext_resource type="Texture2D" uid="uid://bchdv8l5tdfqb" path="res://Assets/Images/UI/Background2.png" id="2_itt5c"]
[ext_resource type="FontFile" uid="uid://cir48cl3fhleo" path="res://Assets/Fonts/montserrat.bold.ttf" id="3_talw1"]
[ext_resource type="Texture2D" uid="uid://bbnnht2ad2veb" path="res://Assets/Images/UI/CollectionButton.png" id="4_atc8x"]
[ext_resource type="FontFile" uid="uid://ep3h7ef2uyq" path="res://Assets/Fonts/montserrat.medium.ttf" id="4_kh4js"]
[ext_resource type="Texture2D" uid="uid://cla2qkq7xy6yt" path="res://Assets/Images/UI/MainMenuButton.png" id="4_rn465"]
[ext_resource type="Texture2D" uid="uid://d4mygy4hg3w76" path="res://Assets/Images/UI/StartButton.png" id="5_1cv0u"]
[ext_resource type="Texture2D" uid="uid://eu6bc878m0ye" path="res://Assets/Images/UI/ProfileButton.png" id="5_8be8v"]
[ext_resource type="Texture2D" uid="uid://d4jm4seoy3gyo" path="res://Assets/Images/UI/SettingsButton.png" id="5_8dsvu"]
[ext_resource type="Texture2D" uid="uid://ctkrl4n86t4g6" path="res://Assets/Images/UI/NavBackground.png" id="6_m5kqd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwr45"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gp4cd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjkql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4sbl5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apk0v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qpvi7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ax72s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ynhmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kapwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lkbye"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7155")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_itt5c")

[node name="TitleVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.06
anchor_right = 0.97
anchor_bottom = 0.06
offset_bottom = 364.0
grow_horizontal = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_talw1")
theme_override_font_sizes/font_size = 100
text = "Settings"
horizontal_alignment = 1

[node name="ContentScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.23
anchor_right = 0.95
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
horizontal_scroll_mode = 0

[node name="ContentVBox" type="VBoxContainer" parent="ContentScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 60

[node name="HorizonRow" type="HBoxContainer" parent="ContentScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NameLabel" type="Label" parent="ContentScrollContainer/ContentVBox/HorizonRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_talw1")
theme_override_font_sizes/font_size = 60
text = "Horizon:"

[node name="OptionButton" type="OptionButton" parent="ContentScrollContainer/ContentVBox/HorizonRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_kh4js")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_bwr45")
item_count = 4
popup/item_0/text = "10"
popup/item_1/text = "12"
popup/item_1/id = 1
popup/item_2/text = "15"
popup/item_2/id = 2
popup/item_3/text = "20"
popup/item_3/id = 3

[node name="DifficultyRow" type="HBoxContainer" parent="ContentScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NameLabel" type="Label" parent="ContentScrollContainer/ContentVBox/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_talw1")
theme_override_font_sizes/font_size = 60
text = "Difficulty:"

[node name="OptionButton" type="OptionButton" parent="ContentScrollContainer/ContentVBox/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_kh4js")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_bwr45")
item_count = 3
popup/item_0/text = "10"
popup/item_0/id = 1
popup/item_1/text = "20"
popup/item_1/id = 2
popup/item_2/text = "30"
popup/item_2/id = 3

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.75
anchor_bottom = 0.8
offset_left = -4.0
offset_top = -131.4
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_gp4cd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pjkql")
disabled = true
icon = ExtResource("5_1cv0u")
flat = true

[node name="ButtonLabel" type="Label" parent="SaveButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_talw1")
theme_override_font_sizes/font_size = 60
text = "SAVE CHANGES"
horizontal_alignment = 1

[node name="ButtonsRowBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.86
anchor_right = 0.92
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_m5kqd")

[node name="ButtonsRow" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.87
anchor_right = 0.92
anchor_bottom = 0.94
offset_top = -8.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="MainMenuButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_4sbl5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_apk0v")
icon = ExtResource("4_rn465")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CollectionButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_qpvi7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ax72s")
icon = ExtResource("4_atc8x")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ProfileButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_ynhmq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kapwj")
icon = ExtResource("5_8be8v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SettingsButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_ynhmq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lkbye")
disabled = true
icon = ExtResource("5_8dsvu")
flat = true
icon_alignment = 1
expand_icon = true
